# richat

./: .editorconfig  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml  token-init.md
.github/: issue_template.md
.github/workflows/: cla.yml  release-cli.yml  release-plugin-agave.yml  release-richat.yml  test.yml
benches/: Cargo.toml
benches/benches/encode/: account.rs  entry.rs  slot.rs
benches/benches/encode-geyser/: account.rs  block_meta.rs  entry.rs  slot.rs  transaction.rs
benches/benches/filter-parse/: account.rs  slot.rs
benches/benches/parse/: block_meta.rs  entry.rs  slot.rs  transaction.rs
benches/src/: lib.rs
cli/: Cargo.toml  richat-track.yml
cli/src/: main.rs  pubsub.rs  stream.rs  stream_grpc.rs  stream_richat.rs  track.rs
client/: Cargo.toml  build.rs
client/src/: error.rs  grpc.rs  quic.rs  stream.rs  tcp.rs
filter/: Cargo.toml
filter/benches/parse/: account.rs  block_meta.rs  main.rs  transaction.rs
filter/src/: config.rs  filter.rs  lib.rs  message.rs
filter/src/protobuf/: decode.rs  encode.rs  limited.rs  mod.rs
metrics/src/: server.rs
plugin/: Cargo.toml  README.md  build.rs  config.json
plugin-agave/: Cargo.toml  config.json
plugin-agave/benches/encode/: account.rs  block_meta.rs  entry.rs  slot.rs  transaction.rs
plugin-agave/fuzz/: Cargo.toml
plugin-agave/fuzz/fuzz_targets/: account.rs  transaction.rs
plugin-agave/src/: channel.rs  config.rs  metrics.rs  plugin.rs
plugin-agave/src/protobuf/: message.rs  mod.rs
plugin-agave/src/protobuf/encoding/: account.rs  block_meta.rs  entry.rs  mod.rs  slot.rs  transaction.rs
plugin/benches/: encode.rs
plugin/benches/encode/: account.rs  block_meta.rs  entry.rs  main.rs  predefined.rs  slot.rs  transaction.rs
plugin/fuzz/: Cargo.toml
plugin/fuzz/fuzz_targets/: fuzz_target_account.rs  fuzz_target_blockmeta.rs  fuzz_target_entry.rs  fuzz_target_slot.rs  fuzz_target_transaction.rs  transaction.rs
plugin/src/: channel.rs  config.rs  grpc.rs  metrics.rs  plugin.rs  protobuf.rs  quic.rs
plugin/src/protobuf/: message.rs  mod.rs
plugin/src/protobuf/encoding/: account.rs  block_meta.rs  entry.rs  mod.rs  slot.rs  transaction.rs
plugin/src/transports/: grpc.rs  mod.rs  quic.rs  tcp.rs
proto/: Cargo.toml  build.rs
proto/proto/: richat.proto
proto/src/: convert_from.rs  convert_to.rs  lib.rs
richat/: Cargo.toml  build.rs  config.yml
richat/benches/: channel_ring.rs
richat/src/: channel.rs  config.rs  lib.rs  metrics.rs  source.rs  storage.rs  util.rs
richat/src/channel/: source.rs
richat/src/grpc/: block_meta.rs  config.rs  server.rs
richat/src/pubsub/: config.rs  filter.rs  mod.rs  notification.rs  server.rs  solana.rs  tracker.rs
richat/src/richat/: server.rs
richat/src/storage/: api.rs  metadata.rs  mod.rs  recovery.rs  segment_format.rs  segment_reader.rs  segment_writer.rs  segmented.rs  segments.rs
shared/: Cargo.toml  build.rs
shared/proto/: transport.proto
shared/src/: affinity.rs  config.rs  five8.rs  lib.rs  tracing.rs  version.rs
shared/src/jsonrpc/: helpers.rs  requests.rs
shared/src/transports/: grpc.rs  mod.rs  quic.rs  tcp.rs
