[package]
name = "richat-benches"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Benchmarks"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parse"
harness = false

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
richat-filter = { workspace = true }
richat-plugin-agave = { workspace = true, features = ["fixtures"] }
richat-proto = { workspace = true, features = ["yellowstone-grpc-plugin"] }

[lints]
workspace = true
