[package]
name = "richat-cli"
version = "10.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Cli Tool"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const-hex = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
jsonrpsee-types = { workspace = true }
maplit = { workspace = true }
prost = { workspace = true }
richat-client = { workspace = true }
richat-plugin-agave = { workspace = true }
richat-proto = { workspace = true }
richat-shared = { workspace = true, features = ["tracing"] }
rustls = { workspace = true, features = ["aws_lc_rs"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
solana-account-decoder = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-message-v3 = { workspace = true }
solana-pubkey = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-transaction-status = { workspace = true }
solana-transaction-v3 = { workspace = true, features = ["dev-context-only-utils"] }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing = { workspace = true }

[lints]
workspace = true
