[package]
name = "richat-filter"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Filters"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true }
richat-shared = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[lints]
workspace = true
