[package]
name = "richat-plugin-agave"
version = "8.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Agave Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "richat-plugin-agave-config-check"
path = "src/bin/config-check.rs"
required-features = ["plugin"]

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
log = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
richat-metrics = { workspace = true }
richat-proto = { workspace = true }
richat-shared = { workspace = true, features = ["transports", "version"] }
rustls = { workspace = true, features = ["aws_lc_rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
solana-account-decoder = { workspace = true }
solana-clock = { workspace = true }
solana-logger = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[dev-dependencies]
richat-benches = { path = "../benches" }

[features]
default = ["plugin"]
plugin = []
rustls-install-default-provider = []

[lints]
workspace = true
