[package]
name = "richat"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat code"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
