[package]
name = "richat-shared"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Shared code"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
humantime-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
