[package]
name = "richat-shared"
version = "7.1.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Shared code"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[dependencies]
affinity-linux = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
five8 = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
human-size = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
json5 = { workspace = true, optional = true }
jsonrpc-core = { workspace = true, optional = true }
jsonrpsee-types = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
quanta = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
richat-metrics = { workspace = true, optional = true }
richat-proto = { workspace = true, optional = true }
rustls = { workspace = true, features = ["std", "tls12"], optional = true }
rustls-pemfile = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
solana-rpc-client-api = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], optional = true }
tokio-util = { workspace = true }
toml = { workspace = true, optional = true }
tonic = { workspace = true, features = ["tls-native-roots", "gzip", "zstd"], optional = true }
tonic-prost = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"], optional = true }

[build-dependencies]
anyhow = { workspace = true, optional = true }
protoc-bin-vendored = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }

[features]
default = [
    "config",
    "five8",
    "jsonrpc",
    "tracing",
    "transports",
    "version"
]
config = [
    "dep:affinity-linux",
    "dep:base64",
    "dep:bs58",
    "dep:human-size",
    "dep:json5",
    "dep:rcgen",
    "dep:regex",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:serde",
    "dep:serde_yaml",
    "dep:solana-sdk",
    "dep:thiserror",
    "dep:tokio",
    "dep:toml",
    "five8",
]
five8 = ["dep:five8", "dep:solana-sdk"]
jsonrpc = [
    "dep:anyhow",
    "dep:futures",
    "dep:http-body-util",
    "dep:hyper",
    "dep:jsonrpc-core",
    "dep:jsonrpsee-types",
    "dep:metrics",
    "dep:richat-metrics",
    "dep:quanta",
    "dep:serde",
    "dep:serde_json",
    "dep:solana-rpc-client-api",
]
tracing = [
    "dep:serde",
    "dep:thiserror",
    "dep:tracing",
    "dep:tracing-subscriber",
]
transports = [
    "dep:anyhow",
    "dep:futures",
    "dep:humantime-serde",
    "dep:prost",
    "dep:protoc-bin-vendored",
    "dep:quinn",
    "dep:richat-proto",
    "dep:socket2",
    "dep:tonic",
    "dep:tonic-build",
    "dep:tracing",
    "config",
    "version",
]
version = ["dep:hostname", "dep:serde", "dep:serde_json"]

[lints]
workspace = true
