[package]
name = "richat-plugin-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
solana-sdk = { workspace = true }
prost_011 = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }

[dependencies.richat-plugin]
path = ".."

[[bin]]
name = "fuzz_target_account"
path = "fuzz_targets/fuzz_target_account.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_slot"
path = "fuzz_targets/fuzz_target_slot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_transaction"
path = "fuzz_targets/fuzz_target_transaction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_entry"
path = "fuzz_targets/fuzz_target_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_blockmeta"
path = "fuzz_targets/fuzz_target_blockmeta.rs"
test = false
doc = false
bench = false
