[package]
name = "richat-plugin-fuzz"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Agave Geyser Plugin Fuzz Tests"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
agave-geyser-plugin-interface = { workspace = true }
arbitrary = { workspace = true, features = ["derive"] }
libfuzzer-sys = { workspace = true }
prost = "0.11.9" # shitty solution, but we need `prost` because `prost::Message`
richat-plugin = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }

[[bin]]
name = "fuzz_target_account"
path = "fuzz_targets/fuzz_target_account.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_blockmeta"
path = "fuzz_targets/fuzz_target_blockmeta.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_entry"
path = "fuzz_targets/fuzz_target_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_slot"
path = "fuzz_targets/fuzz_target_slot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_transaction"
path = "fuzz_targets/fuzz_target_transaction.rs"
test = false
doc = false
bench = false
